# ai-native-book-backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.specify/memory/: constitution.md
backend/: validate_implementation.py
backend/src/: config.py  exceptions.py  logging_config.py  main.py  vector_db.py
backend/src/agents/: book_assistant.py
backend/src/api/: admin.py  chat.py  health.py  home.py
backend/src/ingestors/: __init__.py  content_chunker.py  content_cleaner.py  content_scraper.py  sitemap_parser.py
backend/src/models/: agent_response.py  book_content.py  chat_session.py  user_query.py  vector_embedding.py
backend/src/services/: chat_service.py  embedding_service.py  vector_service.py
backend/src/tools/: __init__.py  search_tool.py
backend/tests/contract/: test_chat_contract.py  test_ingest_contract.py
backend/tests/integration/: test_search_tool.py  test_storage_persistence.py
backend/tests/unit/: test_admin_auth.py  test_agent_logic.py  test_sitemap_parser.py
docs/: README.md
history/adr/: 001-scraping-strategy.md  002-content-chunking-strategy.md  003-search-strategy.md  004-agent-memory.md
history/prompts/ai-book-chatbot/: 1-execute-implementation-plan.green.prompt.md  2-create-feature-spec-for-ai-book-chatbot.spec.prompt.md  2-update-implementation-openai-agents.refactor.prompt.md  3-create-implementation-plan-for-ai-book-chatbot.plan.prompt.md  (+2 more)
specs/1-ai-book-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+3 files in other folders)
