[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.3",
    "black==24.10.0",
    "cohere==5.20.1",
    "fastapi==0.125.0",
    "flake8==7.1.1",
    "httpx==0.28.1",
    "mypy==1.14.0",
    "openai==2.13.0",
    "openai-agents==0.6.3",
    "pydantic==2.12.3",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "python-dotenv==1.0.1",
    "python-json-logger==3.3.0",
    "qdrant-client==1.16.2",
    "uvicorn[standard]==0.38.0",
]
